# DDI

./: .gitignore  DDI.ipynb  docker-compose.yml  main.py  readme.md  render.yaml  setup_postgres.ps1  start.bat  start_dev.ps1
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: drugs.py  history.py  predict.py  stats.py
backend/app/ml/: predictor.py  train.py
backend/app/models/: __init__.py  drug.py  prediction.py
backend/app/schemas/: drug.py  prediction.py
backend/model_artifacts/: model_meta.json  scaler.pkl
backend/scripts/: seed_db.py
dataset/merged_data/: merged_data.csv
dataset/raw_data/: raw_drug.csv  raw_properties.xlsx
dataset/train_data/: train_set.csv
featuring_data/: ML1.ipynb
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: DrugSearchInput.jsx  Footer.jsx  Navbar.jsx  SeverityBadge.jsx
frontend/src/pages/: About.jsx  Analytics.jsx  DrugBrowser.jsx  Home.jsx  Predictor.jsx
model/: ddi_notebook.ipynb
