[project]
name = "ddi-backend"
version = "1.0.0"
description = "Drug-Drug Interaction Prediction API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
